[package]
name = "idp2p"
edition = "2021"

[workspace]
edition = "2021"
members = [
    "common",
    "core/id",
    "core/p2p",
]

[dependencies]
cid ={ workspace = true }
wasmtime = { workspace = true }
structopt = { workspace = true }
libp2p = { workspace = true }
dotenv = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
semver = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
futures ={ workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
idp2p-common = { path = "./common" }
idp2p-id = { path = "./core/id" }
idp2p-p2p = { path = "./core/p2p" }
color-eyre = "0"
tui-input = "0"
ratatui = { version = "0", features = ["all-widgets"]}


[workspace.dependencies]
wasmtime = "21"
wit-component = "0"
dotenv = "0"
tracing = "0"
tracing-subscriber = "0"
rand = "0"
lol_alloc = "0"
hex = "0"
structopt = "0"
libp2p = { version = "0.54.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
semver = { version = "1", default-features = false, features = ["serde"] }
regex = { version = "1", default-features = false }
anyhow = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = [
    "derive",
    "alloc",
] }
wit-bindgen = { version = "0", default-features = false, features = ["macros"] }
ciborium = { version = "0", default-features = false }
serde_json = { version = "1", default-features = false }
ed25519-dalek = { version = "2", default-features = false }
sha2 = { version = "*", default-features = false }
multihash = { version = "*", default-features = false, features = [
    "serde",
    "alloc",
] }
cid = { version = "0.11.1", features = ["serde"] }
chrono = { version = "0", default-features = false, features = [
    "alloc",
    "serde",
    "now",
] }
futures = "0"
trait-variant="0"