[package]
name = "idp2p"
edition = "2024"

[workspace]
edition = "2024"
members = [
    "common",
    "core/id",
    "core/p2p"
]

[dependencies]
thiserror = { workspace = true }
wasmtime = { workspace = true }
wit-component = { workspace = true }
structopt = { workspace = true }
libp2p = { workspace = true }
dotenv = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
futures ={ workspace = true }
local-ip-address = { workspace = true }
tracing = { workspace = true }
trait-variant = { workspace = true }
async-trait = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
idp2p-common = { path = "./common" }
idp2p-id = { path = "./core/id" }
color-eyre = "0"
surf = { version = "2", default-features = false, features = ["h1-client"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


[workspace.dependencies]
wasmtime = "21"
wit-component = "0"
local-ip-address = "0.6.3"
dotenv = "0"
tracing = "0"
tracing-subscriber = "0"
rand = "0.8"
lol_alloc = "0"
structopt = "0"
libp2p = { version = "0.54.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
semver = { version = "1", default-features = false, features = ["serde"] }
regex = { version = "1", default-features = false, features = ["unicode-perl"] }
anyhow = { version = "1", default-features = false }
thiserror = "2"
wit-bindgen = { version = "0", default-features = false, features = ["macros"] }
serde = { version = "1", default-features = false, features = [
    "derive",
    "alloc",
] }
ciborium = { version = "0", default-features = false }
coset = { version = "0", default-features = false }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde_with = "3"
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "rand_core"] }
sha2 = { version = "0", default-features = false }
cid = { version = "0", features = ["serde"] }
chrono = { version = "0", default-features = false, features = [
    "alloc",
    "serde",
    "now",
] }
futures = "0"
trait-variant="0"
async-trait = "0"
strum = "0"
strum_macros = "0"