[package]
edition = "2021"
name = "idp2p-core"
version = "0.1.0"

[dependencies]
libp2p = "0.44.0"
async-trait = "0.1.53"
log = "0.4.16"
thiserror = "1.0"
tokio = { version = "1.13.0", features = ["full"] }
unsigned-varint = { version = "0.7.1", default-features = false }
idp2p-common = { version = "0.1.0", path="../common"}
idp2p-core-proto = { version = "0.1.0", path="../core-proto"}

#[dev-dependencies]
#criterion = "0.3"

#[[bench]]
#name = "verify_did"
#harness = false

