[package]
name = "idp2p-network"
edition = "2021"
description = "IDP2P NETWORK"
version = "0.1.0"
authors = ["adem caglin<adem.caglin@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/idp2p/idp2p"
readme = "README.md"
keywords = ["idp2p", "wasm", "webassembly"]
categories = ["webassembly"]

[dependencies]
cid = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
ciborium = { workspace = true }
libp2p = "0.53.2"
wasmtime = "21.0.1"
wit-component = "0.209.1"
idp2p-core ={ path = "../core" }