[package]
name = "idp2p-wasmid"
edition = "2021"
description = "IDP2P WASMID"
version = "0.1.0"
authors = ["adem caglin<adem.caglin@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/idp2p/idp2p"
readme = "README.md"
keywords = ["idp2p", "wasm", "webassembly", "wasmid"]
categories = ["webassembly"]

[profile.dev]
lto = true
opt-level = "z"
strip = "symbols"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true }
cid ={ workspace = true }
lol_alloc = { workspace = true }
anyhow = { workspace = true }
ed25519-dalek  = { workspace = true }
wit-bindgen = { workspace = true }
idp2p-core ={ path = "../core" }


