[package]
name = "idp2p_bootstrap"
version = "0.1.0"
edition = "2021"
copyright = "2022, Adem Caglin"
authors = ["adem caglin <adem.caglin@gmail.com>"] 

[dependencies]
idp2p_common = { version = "0.1.0", path = "../idp2p-common" }
tokio = { version = "1.13.0", features = ["full"] }
libp2p = "0.43.0"

[dev-dependencies]
cargo-deb = "1.36.0"