[package]
name = "idp2p_common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
multibase = "0.9.1"
chrono = "0.4.19"
cid = "0.7.0"
rand = "0.8.0"
ed25519-dalek = "1.0.1"
x25519-dalek = "1.2.0"
sha2 = "0.9.8"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.68", features = ["raw_value"] }
[dependencies.serde_with]
version = "1.11.0"
features = [ "macros" ]
