[package]
name = "idp2p_common"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.16"
anyhow = "1.0"
regex = "1.5.5"
thiserror = "1.0"
multibase = "0.9.1"
chrono = "0.4.19"
cid = "0.7.0"
rand = "0.8.0"
ed25519-dalek = "1.0.1"
x25519-dalek = "1.2.0"
chacha20poly1305 = "0.9.0"
pbkdf2 = "0.10.0"
derivation-path = { version = "0.1.3", default-features = false }
hmac = { version = "0.12.0", default-features = false }
sha2 = "0.10.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.68", features = ["raw_value"] }
[dependencies.serde_with]
version = "1.11.0"
features = [ "macros" ]
