[package]
name = "idp2p_core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.53"
x25519-dalek = "1.2.0"
chacha20poly1305 = "0.9.0"
idp2p_common = { version = "0.1.0", path = "../idp2p-common" }
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.13.0", features = ["full"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "verify_did"
harness = false