[package]
name = "idp2p_core"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.10"
libp2p = "0.43.0"
async-trait = "0.1.53"
x25519-dalek = "1.2.0"
chacha20poly1305 = "0.9.0"
pbkdf2 = "0.10.0"
derivation-path = { version = "0.1.3", default-features = false }
hmac = { version = "0.12.0", default-features = false }
idp2p_common = { version = "0.1.0", path = "../idp2p-common" }
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.13.0", features = ["full"] }

#[dev-dependencies]
#criterion = "0.3"

#[[bench]]
#name = "verify_did"
#harness = false

[build-dependencies]
prost-build = "0.10"