[package]
edition = "2021"
name = "idp2p-core"
version = "0.1.0"

[dependencies]
log = "0.4.16"
thiserror = "1.0"
libp2p = "0.46.1"
prost = "0.10.4"
async-trait = "0.1.53"
serde_json = "1.0.81"
tokio = { version = "1.13.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
idp2p-common = { version = "0.1.0", path="../idp2p-common"}

[dependencies.serde_with]
version = "1.11.0"
features = [ "macros" ]

[build-dependencies]
prost-build = "0.10.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "verify_id"
harness = false

