[package]
name = "idp2p_demo"
version = "0.1.0"
edition = "2021"
copyright = "2022, Adem Caglin"
authors = ["adem caglin <adem.caglin@gmail.com>"] 

[dependencies]
structopt = "0.3.25"
env_logger = "0.9.0"
dotenv = "0.15.0"
colored = "2.0.0"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.13.0", features = ["full"] }
idp2p_common = { version = "0.1.0", path = "../idp2p-common" }
idp2p_core = { version = "0.1.0", path = "../idp2p-core" }
idp2p_node = { version = "0.1.0", path = "../idp2p-node" }
idp2p_wallet = { version = "0.1.0", path = "../idp2p-wallet" }
libp2p = {version = "0.41.0", features= ["tcp-tokio", "mdns"]}
