[package]
name = "idp2p_wallet"
version = "0.1.0"
edition = "2021"
copyright = "2022, Adem Caglin"
authors = ["adem caglin <adem.caglin@gmail.com>"] 

[dependencies]
pbkdf2 = "0.10.0"
chacha20poly1305 = "0.9.0"
derivation-path = { version = "0.1.3", default-features = false }
hmac = { version = "0.12.0", default-features = false }
tokio = { version = "1.13.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
idp2p_common = { version = "0.1.0", path = "../idp2p-common" }
idp2p_core = { version = "0.1.0", path = "../idp2p-core" }
idp2p_node = { version = "0.1.0", path = "../idp2p-node" }
