[package]
name = "idp2p_node"
version = "0.1.0"
edition = "2018"

[dependencies]
structopt = "0.3.25"
libp2p = {version = "0.41.0", features= ["tcp-tokio", "mdns"]}
env_logger = "0.9.0"
anyhow = "1.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.13.0", features = ["full"] }
rand = "0.8.4"
async-trait = "0.1.52"
warp = "0.3.2"
idp2p_core = { version = "0.1.0", path = "../core" }
