[package]
edition = "2021"
name = "idp2p-utils"
version = "0.1.0"

[dependencies]
log = "0.4.16"
regex = "1.5.5"
thiserror = "1.0.38"
multibase = "0.9.1"
multihash = "0.19.0"
chrono = "0.4.19"
rand = "0.8.5"
ed25519-dalek = { version = "1.0.1" }
x25519-dalek = { version = "2.0.0-rc.2", features = ["static_secrets"] }
pqcrypto-kyber = "0.7.6"
pqcrypto-dilithium = "0.4.5"
winternitz = "0.1.4"
aes-gcm = { version = "0.10.1" }
pbkdf2 = "0.12.1"
hex = "0.4.2"
derivation-path = { version = "0.2.0", default-features = false }
hmac = { version = "0.12.0", default-features = false }
sha2 = "0.10.1"
serde_json = "1.0.96"
serde = "1.0.160"
unsigned-varint = { version = "0.7.1", default-features = false }
[dependencies.serde_with]
version = "2.3.2"
features = [ "macros" ]

