[package]
name = "idp2p-p2p"
edition = "2021"
version = "0.1.0"

[profile.dev]
lto = true
opt-level = "z"
strip = "symbols"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true }
cid ={ workspace = true }
lol_alloc = { workspace = true }
anyhow = { workspace = true }
wit-bindgen = { workspace = true }
idp2p-common ={ path = "../../common" }
