[package]
name = "idp2p-id"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
rand = { workspace = true }
wit-bindgen = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
cid = { workspace = true }
multihash = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
idp2p-common = { path = "../../common" }