[package]
name = "idp2p-id"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dev-dependencies]
rand = { workspace = true }

[dependencies]
wit-bindgen = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
cid = { workspace = true }
multihash = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
idp2p-common = { path = "../../common" }