[package]
name = "idp2p-id"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dev-dependencies]
rand = { workspace = true }

[dependencies]
wit-bindgen = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
cid = { workspace = true }
serde = { workspace = true }
ciborium = { workspace = true }
coset = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
idp2p-common = { path = "../../common" }