[package]
name = "idp2p-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
cid = { workspace = true }
ciborium = { workspace = true }
multihash = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
idp2p-common = { path = "../../common" }
idp2p-id = { path = "../id" }