[package]
name = "idp2p-sdt"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.16"
thiserror = "1.0.38"
serde_json = "1.0.81"
serde = { version = "1.0.130", features = ["derive"] }
idp2p-common = { version = "0.1.0", path="../../common"}

[dependencies.serde_with]
version = "1.11.0"
features = [ "macros" ]

