[package]
name = "idp2p_dctur"
version = "0.1.0"
edition = "2021"
copyright = "2022, Adem Caglin"
authors = ["adem caglin <adem.caglin@gmail.com>"] 

[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
libp2p = {version = "0.43.0", features=["default", "dcutr"] }
structopt = "0.3.25"
env_logger = "0.9.0"
futures-timer = "3.0.2"