[package]
name = "idp2p-sdt"
edition = "2021"
version = "0.1.0"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
cid ={ workspace = true }
anyhow = { workspace = true }
wit-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true } 
idp2p-common = { path = "../../common" }
wasi = "0.13.3"
